--- a/src/main/resources/templates/movies.html
+++ b/src/main/resources/templates/movies.html
@@ -5,15 +5,15 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 <body>
-<div class="container">
-    <h2> Movie List</h2>
+<div class="container mt-5">
+    <h2 class="mb-4"> Available Movies</h2>
     <table class="table table-stripped">
         <thead>
         <tr>
-            <th>ID</th>
             <th>Title</th>
             <th>Release Date</th>
-            <th> Show Cycle</th>
+            <th>Show Cycle</th>
+            <th>Action</th>
         </tr>
         </thead>
         <tbody>
@@ -22,6 +22,8 @@
             <td th:text="${movie.title}"></td>
             <td th:text="${movie.releaseDate}"></td>
             <td th:text="${movie.showCycle}"></td>
+            <td>
+                <a th:href="@{/booking/create(movieId=${movie.id})}" class="btn btn-primary">Book ticket</a></td>
         </tr>
         </tbody>
     </table>
