--- a/src/main/resources/templates/signup_form.html
+++ b/src/main/resources/templates/signup_form.html
@@ -1,47 +1,39 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Sign Up</title>
     <title> Movies</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+
+    <link rel="stylesheet" type="text/css" href="../static/signup.css">
 </head>
 <body>
-<div class="container text-center">
-    <div><h2>Welcome to Movie booking page</h2></div>
-
-    <div><h3>Registration page</h3></div>
-    <div>
-        <form th:action="@{/process_register}" method="post" th:object="${user}"
-              style="max-width:600px; margin:0 auto;">
-            <div class="m-3">
-                <div class="form-group row">
-                    <label class="col-form-label col-4">Name</label>
-                    <div class="col-8">
-                        <input type="text" class="form-control" th:field="*{name}" minlength="6" maxlength="20"
-                               required/>
-                    </div>
-                </div>
-                <div class="form-group row">
-                    <label class="col-form-label col-4">E-Mail</label>
-                    <div class="col-8">
-                        <input type="email" class="form-control" th:field="*{email}" minlength="6" maxlength="20"
-                               required/>
-                    </div>
-                </div>
-                <div class="form-group row">
-                    <label class="col-form-label col-4">Password</label>
-                    <div class="col-8">
-                        <input type="password" class="form-control" th:field="*{password}" minlength="6" maxlength="10"
-                               required/>
-                    </div>
-                </div>
-                <div>
-                    <button type="submit" class="btn btn-primary">Sign Up</button>
-                </div>
-            </div>
-        </form>
+<div class="login-container">
+    <h1>Sign Up</h1>
+    <p>It's quick and easy.</p>
+    <form method="post" th:action="@{/process_register}" th:object="${user}">
+        <div class="input-group">
+            <label for="name">Name</label>
+            <input id="name" name="name" class="form-control" maxlength="20" minlength="6" required th:field="*{name}"
+                   type="text"/>
+        </div>
+        <div class="input-group">
+            <label for="email">E-mail</label>
+            <input id="email" class="form-control" maxlength="20" minlength="6" required th:field="*{email}"
+                   type="email"/>
+        </div>
+        <div class="input-group">
+            <label for="password">Password</label>
+            <input name="password" id="password" class="form-control" maxlength="10" minlength="6" required
+                   th:field="*{password}" type="password"/>
+        </div>
+        <button type="submit" class="btn-primary">Sign Up</button>
+    </form>
+    <div class="create-account">
+        <p>have an account? <a href="/login">login</a></p>
     </div>
 </div>
-
-
 </body>
+</html>
 </html>
