--- a/src/main/resources/templates/register_success.html
+++ b/src/main/resources/templates/register_success.html
@@ -2,13 +2,15 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title> Movies</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
 <div class="container text-center">
     <div class="container text-center"><h3>You signed up successfully!!!</h3></div>
-    <div class="container text-center"><h4><a href="@{/login}">Click here to login</a></h4>
+    <div class="container text-center">
+        <h4><a th:href="@{/login}">Click here to login</a></h4>
     </div>
+</div>
 </div>
 
 
