--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -27,6 +27,9 @@
     <div th:if="${param.error}">
         <p class="error">Invalid email or password.</p>
     </div>
+    <div th:if="${param.existUserError}">
+        <p class="error"><span th:text="${emailexist}">User already exist. please log in!!!</p>
+    </div>
 </div>
 </body>
 </html>
