--- a/src/main/resources/templates/register_success.html
+++ b/src/main/resources/templates/register_success.html
@@ -6,13 +6,11 @@
 </head>
 <body>
 <div class="container text-center">
-    <div class="container text-center"><h3>You signed up successfully!!!</h3></div>
+    <div class="container text-center"><h3>Welcome, <span th:text="${email}"> User</span>!</h3></div>
+    <div class="container text-center"><h4>You signed up successfully!!!</h4></div>
     <div class="container text-center">
         <h4><a th:href="@{/login}">Click here to login</a></h4>
     </div>
 </div>
-</div>
-
-
 </body>
 </html>
