--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -1,18 +1,31 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title> Movies</title>
+    <title>Movies</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-<div class="container text-center">
-    <div>
-        <form method="post" th:action="@{/logout}">
-            <input type="submit" value="Sign out">
-        </form>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <a class="navbar-brand" href="#">MovieBooking</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+                <form method="post" th:action="@{/logout}">
+                    <button type="submit" class="btn btn-outline-light">Sign out</button>
+                </form>
+            </li>
+        </ul>
     </div>
-    <div><h1>List of All Users</h1></div>
-    <div>
+</nav>
+
+<div class="container mt-5">
+    <div class="text-center mb-4">
+        <h1>List of All Users</h1>
+    </div>
+    <div class="table-responsive">
         <table class="table table-striped table-bordered">
             <thead class="thead-dark">
             <tr>
@@ -22,18 +35,18 @@
             </tr>
             </thead>
             <tbody>
-
-            <tr th:each="user:${listUsers}">
+            <tr th:each="user : ${listUsers}">
                 <td th:text="${user.id}">Id</td>
                 <td th:text="${user.name}">Name</td>
                 <td th:text="${user.email}">E-Mail</td>
-
             </tr>
             </tbody>
         </table>
     </div>
 </div>
 
-
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
